# shared_whiteboard_backend

./: .coverage  .cursorindexingignore  .gitignore  FAILING_TESTS.md  README.md  WIP.md  prompt.md  pyproject.toml  requirements.txt
.specstory/history/: 2025-04-23_00-08-backend-development-for-shared-whiteboard-app.md  2025-04-23_00-21-fastapi-backend-development-setup.md  2025-04-23_00-37-resolving-'app'-module-import-issue.md  2025-04-23_00-43-ignore-all-pycache-directories-in-git.md  2025-04-23_00-45-fixing-fastapi-modulenotfounderror.md  2025-04-23_00-50-git-ignore-issue-with-whiteboard-db.md  2025-04-23_00-50-untitled.md  2025-04-23_00-53-testing-websocket-endpoints-in-fastapi.md  2025-04-23_01-05-debugging-failing-tests.md  2025-04-23_01-13-fixing-failing-tests-in-application-code.md  2025-04-23_04-27-command-to-run-all-tests.md  2025-04-23_04-33-test-analysis-and-failure-reporting.md  2025-04-23_04-40-unique-user-token-implementation.md  2025-04-23_04-44-fixing-room-table-creation-in-tests.md  2025-04-23_05-03-fixing-websocket-tests-with-mock-redis.md  2025-04-23_05-16-running-pytest-and-analyzing-failures.md  2025-04-23_05-34-fixing-failing-tests-in-auth-py.md  2025-04-23_05-37-fixing-failing-tests-in-test-rooms-py.md  2025-04-23_05-42-fixing-failing-test-with-dependency-injection.md
app/: main.py
app/api/: dependencies.py
app/core/: config.py  security.py  tasks.py
app/db/: database.py
app/models/: models.py
app/schemas/: auth.py  drawing.py  room.py
app/services/: redis_service.py
app/tests/: README.md  __init__.py  conftest.py  test_auth.py  (+3 more)
(+2 files in other folders)
